重构账号注册逻辑，引入账号注册索引领域服务。

--- a/Forum.Domain/Forum.Domain.csproj
+++ b/Forum.Domain/Forum.Domain.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\AccountIndex.cs" />
+    <Compile Include="Accounts\RegisterAccountIndexService.cs" />
     <Compile Include="Accounts\IAccountIndexStore.cs" />
     <Compile Include="AggregateRootFactory.cs" />
     <Compile Include="Accounts\Account.cs" />
