--- a/Forum.CommandService/Forum.CommandService.csproj
+++ b/Forum.CommandService/Forum.CommandService.csproj
@@ -54,12 +54,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ECommon.Log4Net.1.3.2\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode">
-      <HintPath>..\packages\ENode.2.3.6\lib\net40\ENode.dll</HintPath>
-    </Reference>
-    <Reference Include="ENode.EQueue, Version=1.3.9.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.3.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.3.9\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.2.3.7\lib\net40\ENode.dll</HintPath>
+    </Reference>
+    <Reference Include="ENode.EQueue, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ENode.EQueue.1.4.0\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
     <Reference Include="EQueue">
       <HintPath>..\packages\EQueue.1.2.2\lib\net40\EQueue.dll</HintPath>
