--- a/Forum.Web/Forum.Web.csproj
+++ b/Forum.Web/Forum.Web.csproj
@@ -155,6 +155,7 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\SectionAdminController.cs" />
+    <Compile Include="Controls\Pager.cs" />
     <Compile Include="Extensions\JsonHandlerAttribute.cs" />
     <Compile Include="Extensions\JsonNetResult.cs" />
     <Compile Include="Extensions\AjaxAuthorizeAttribute.cs" />
