--- a/Forum.EventService/log4net.config
+++ b/Forum.EventService/log4net.config
@@ -12,7 +12,7 @@
   </appender>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
-    <priority value="ERROR"/>
+    <priority value="INFO"/>
     <appender-ref ref="rollingFile"/>
   </root>
 </log4net>
