--- a/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
+++ b/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
@@ -43,7 +43,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccountIndexStore.cs" />
+    <Compile Include="AccountIndexRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
