--- a/Forum.Domain.Tests/App.config
+++ b/Forum.Domain.Tests/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
   </startup>
   <connectionStrings>
-    <add name="default" connectionString="Server=(local);Database=Forum;User Id=sa;Password=howareyou;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
+    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
   </connectionStrings>
 </configuration>
