--- a/Forum.Domain.Tests/Forum.Domain.Tests.csproj
+++ b/Forum.Domain.Tests/Forum.Domain.Tests.csproj
@@ -52,17 +52,17 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ECommon.Log4Net.1.3.8\lib\net40\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.4.7.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.5.2.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.4.7\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.5.2\lib\net40\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode.EQueue, Version=1.5.6.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.5.1\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.EQueue.1.5.6\lib\net40\ENode.EQueue.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="EQueue, Version=1.3.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.3.3\lib\net40\EQueue.dll</HintPath>
+      <HintPath>..\packages\EQueue.1.3.5\lib\net40\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -82,14 +82,28 @@
   <ItemGroup>
     <Compile Include="AccountTest.cs" />
     <Compile Include="ENodeExtensions.cs" />
-    <Compile Include="PostTest.cs" />
+    <Compile Include="PostTest.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Providers\AggregateRootTypeCodeProvider.cs" />
-    <Compile Include="Providers\CommandTopicProvider.cs" />
-    <Compile Include="Providers\CommandTypeCodeProvider.cs" />
-    <Compile Include="Providers\EventHandlerTypeCodeProvider.cs" />
-    <Compile Include="Providers\EventTopicProvider.cs" />
-    <Compile Include="Providers\EventTypeCodeProvider.cs" />
+    <Compile Include="Providers\AggregateRootTypeCodeProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Providers\CommandTopicProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Providers\CommandTypeCodeProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Providers\EventHandlerTypeCodeProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Providers\EventTopicProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Providers\EventTypeCodeProvider.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="ReplyTest.cs" />
     <Compile Include="SectionTest.cs" />
     <Compile Include="TestBase.cs" />
@@ -137,6 +151,7 @@
       <Name>Forum.QueryServices</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\nuget.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
