--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -8,7 +8,7 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
+    <add name="default" connectionString="Server=(local);Initial Catalog=Forum;uid=sa;pwd=howareyou;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.5.1" />
