升级论坛，使用最新版的ENode

--- a/Forum.Domain.Tests/log4net.config
+++ b/Forum.Domain.Tests/log4net.config
@@ -1,18 +1,57 @@
 ﻿<log4net debug="false">
-  <appender name="rollingFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-    <param name="File" value="log/log.txt"/>
-    <param name="AppendToFile" value="true"/>
-    <param name="RollingStyle" value="Date"/>
-    <param name="DatePattern" value="yyyy-MM-dd"/>
-    <param name="StaticLogFileName" value="true"/>
-    <param name="CountDirection" value="1"/>
-    <layout type="log4net.Layout.PatternLayout,log4net">
-      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
-    </layout>
-  </appender>
-  <root>
-    <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
-    <priority value="INFO"/>
-    <appender-ref ref="rollingFileAppender"/>
-  </root>
+    <appender name="defaultAppender" type="log4net.Appender.TraceAppender">
+        <layout type="log4net.Layout.PatternLayout">
+            <conversionPattern value="%-5level %logger - %message%newline" />
+        </layout>
+    </appender>
+    <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/ecommon_log.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+        </layout>
+    </appender>
+    <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/equeue_log.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+        </layout>
+    </appender>
+    <appender name="enodeAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/enode_log.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+        </layout>
+    </appender>
+    <logger name="ECommon" additivity="false">
+        <level value="Info"/>
+        <appender-ref ref="ecommonAppender" />
+    </logger>
+    <logger name="EQueue" additivity="false">
+        <level value="Info"/>
+        <appender-ref ref="equeueAppender" />
+    </logger>
+    <logger name="ENode" additivity="false">
+        <level value="Info"/>
+        <appender-ref ref="enodeAppender" />
+    </logger>
+    <root>
+        <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
+        <priority value="INFO"/>
+        <appender-ref ref="defaultAppender"/>
+    </root>
 </log4net>
