--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -10,9 +10,17 @@
   <connectionStrings>
     <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
   </connectionStrings>
+  <!--
+    For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
+
+    The following attributes can be set on the <httpRuntime> tag.
+      <system.Web>
+        <httpRuntime targetFramework="4.5" />
+      </system.Web>
+  -->
   <system.web>
-    <compilation debug="true" targetFramework="4.5.1" />
-    <httpRuntime targetFramework="4.5.1" />
+    <compilation debug="true" targetFramework="4.5" />
+    <httpRuntime targetFramework="4.5" />
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Login" />
     </authentication>
