--- a/Forum.BrokerService/App.config
+++ b/Forum.BrokerService/App.config
@@ -1,9 +1,9 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <startup>
-    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.1" />
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
   <connectionStrings>
-    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
+    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100"/>
   </connectionStrings>
 </configuration>
