--- a/Forum.BrokerService/log4net.config
+++ b/Forum.BrokerService/log4net.config
@@ -1,18 +1,54 @@
 ﻿<log4net debug="false">
-  <appender name="rollingFile" type="log4net.Appender.RollingFileAppender,log4net">
-    <param name="File" value="log/log.txt"/>
-    <param name="AppendToFile" value="true"/>
-    <param name="RollingStyle" value="Date"/>
-    <param name="DatePattern" value="yyyy-MM-dd"/>
-    <param name="StaticLogFileName" value="true"/>
-    <param name="CountDirection" value="1"/>
-    <layout type="log4net.Layout.PatternLayout,log4net">
-      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
-    </layout>
-  </appender>
-  <root>
-    <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
-    <priority value="INFO"/>
-    <appender-ref ref="rollingFile"/>
-  </root>
+    <appender name="consoleAppender" type="log4net.Appender.ConsoleAppender">
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level - %message%newline"/>
+        </layout>
+    </appender>
+    <appender name="defaultFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/default.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level - %message%newline"/>
+        </layout>
+    </appender>
+    <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/ecommon.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+        </layout>
+    </appender>
+    <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="log/equeue.txt"/>
+        <param name="AppendToFile" value="true"/>
+        <param name="RollingStyle" value="Date"/>
+        <param name="DatePattern" value="yyyy-MM-dd"/>
+        <param name="StaticLogFileName" value="true"/>
+        <param name="CountDirection" value="1"/>
+        <layout type="log4net.Layout.PatternLayout,log4net">
+            <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+        </layout>
+    </appender>
+    <logger name="ECommon" additivity="false">
+        <level value="Info"/>
+        <appender-ref ref="ecommonAppender" />
+    </logger>
+    <logger name="EQueue" additivity="false">
+        <level value="Info"/>
+        <appender-ref ref="equeueAppender" />
+    </logger>
+    <root>
+        <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
+        <priority value="INFO"/>
+        <appender-ref ref="consoleAppender"/>
+        <appender-ref ref="defaultFileAppender"/>
+    </root>
 </log4net>
