--- a/Forum.CommandService/Forum.CommandService.csproj
+++ b/Forum.CommandService/Forum.CommandService.csproj
@@ -5,15 +5,16 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{6CE6AB8F-FA95-4E28-AF7C-45125E61609E}</ProjectGuid>
-    <OutputType>WinExe</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Forum.CommandService</RootNamespace>
     <AssemblyName>Forum.CommandService</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
     <RestorePackages>true</RestorePackages>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -34,37 +35,46 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Autofac, Version=3.4.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.3.4.0\lib\net40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.1.3.8\lib\net40\ECommon.dll</HintPath>
+    <Reference Include="Dapper">
+      <HintPath>..\packages\Dapper.1.38\lib\net45\Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Autofac, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ECommon, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.Autofac.1.3.8\lib\net40\ECommon.Autofac.dll</HintPath>
+      <HintPath>..\packages\ECommon.1.4.0\lib\net45\ECommon.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.JsonNet, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ECommon.Autofac, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.JsonNet.1.3.8\lib\net40\ECommon.JsonNet.dll</HintPath>
+      <HintPath>..\packages\ECommon.Autofac.1.4.0\lib\net45\ECommon.Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="ECommon.Log4Net, Version=1.3.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ECommon.Log4Net.1.3.8\lib\net40\ECommon.Log4Net.dll</HintPath>
+    <Reference Include="ECommon.Dapper">
+      <HintPath>..\packages\ECommon.Dapper.1.4.0\lib\net45\ECommon.Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.4.7.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ECommon.JsonNet, Version=1.4.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.4.7\lib\net40\ENode.dll</HintPath>
+      <HintPath>..\packages\ECommon.JsonNet.1.4.1\lib\net45\ECommon.JsonNet.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.5.1.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ECommon.Log4Net, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.5.1\lib\net40\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ECommon.Log4Net.1.4.0\lib\net45\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="EQueue, Version=1.3.3.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\EQueue.1.3.3\lib\net40\EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.2.5.4\lib\net45\ENode.dll</HintPath>
+    </Reference>
+    <Reference Include="ENode.EQueue, Version=1.5.8.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ENode.EQueue.1.5.8\lib\net45\ENode.EQueue.dll</HintPath>
+    </Reference>
+    <Reference Include="EQueue, Version=1.3.7.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\EQueue.1.3.7\lib\net45\EQueue.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-full\log4net.dll</HintPath>
@@ -80,6 +90,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Bootstrap.cs" />
     <Compile Include="ENodeExtensions.cs" />
     <Compile Include="ProjectInstaller.cs">
       <SubType>Component</SubType>
@@ -91,6 +102,7 @@
     <Compile Include="Providers\CommandTopicProvider.cs" />
     <Compile Include="Providers\CommandTypeCodeProvider.cs" />
     <Compile Include="Providers\EventTopicProvider.cs" />
+    <Compile Include="Providers\EventTypeCodeProvider.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
