--- a/Forum.Denormalizers.Dapper/packages.config
+++ b/Forum.Denormalizers.Dapper/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ECommon" version="1.3.8" targetFramework="net40" />
-  <package id="ENode" version="2.4.7" targetFramework="net40" />
+  <package id="Dapper" version="1.38" targetFramework="net45" />
+  <package id="ECommon" version="1.4.0" targetFramework="net45" />
+  <package id="ECommon.Dapper" version="1.4.0" targetFramework="net45" />
+  <package id="ENode" version="2.5.4" targetFramework="net45" />
 </packages>
