--- a/Forum.Domain.Dapper/packages.config
+++ b/Forum.Domain.Dapper/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ECommon" version="1.3.8" targetFramework="net40" />
+  <package id="Dapper" version="1.38" targetFramework="net45" />
+  <package id="ECommon" version="1.4.0" targetFramework="net45" />
+  <package id="ECommon.Dapper" version="1.4.0" targetFramework="net45" />
 </packages>
