--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -3,13 +3,15 @@
   <package id="Antlr" version="3.4.1.9004" targetFramework="net451" />
   <package id="Autofac" version="3.4.0" targetFramework="net451" />
   <package id="Autofac.Mvc5" version="3.3.0" targetFramework="net451" />
-  <package id="ECommon" version="1.3.8" targetFramework="net451" />
-  <package id="ECommon.Autofac" version="1.3.8" targetFramework="net451" />
-  <package id="ECommon.JsonNet" version="1.3.8" targetFramework="net451" />
-  <package id="ECommon.Log4Net" version="1.3.8" targetFramework="net451" />
-  <package id="ENode" version="2.4.7" targetFramework="net451" />
-  <package id="ENode.EQueue" version="1.5.1" targetFramework="net451" />
-  <package id="EQueue" version="1.3.3" targetFramework="net451" />
+  <package id="Dapper" version="1.38" targetFramework="net45" />
+  <package id="ECommon" version="1.4.0" targetFramework="net45" />
+  <package id="ECommon.Autofac" version="1.4.0" targetFramework="net45" />
+  <package id="ECommon.Dapper" version="1.4.0" targetFramework="net45" />
+  <package id="ECommon.JsonNet" version="1.4.1" targetFramework="net45" />
+  <package id="ECommon.Log4Net" version="1.4.0" targetFramework="net45" />
+  <package id="ENode" version="2.5.4" targetFramework="net45" />
+  <package id="ENode.EQueue" version="1.5.8" targetFramework="net45" />
+  <package id="EQueue" version="1.3.7" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.2" targetFramework="net451" />
   <package id="Microsoft.AspNet.Razor" version="3.1.2" targetFramework="net451" />
