--- a/Forum.CommandHandlers/Forum.CommandHandlers.csproj
+++ b/Forum.CommandHandlers/Forum.CommandHandlers.csproj
@@ -45,9 +45,9 @@
     <Reference Include="ECommon.Dapper">
       <HintPath>..\packages\ECommon.Dapper.1.4.0\lib\net45\ECommon.Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.5.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\enode.2.5.4\lib\net45\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.5.5\lib\net45\ENode.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
