--- a/Forum.EventService/Forum.EventService.csproj
+++ b/Forum.EventService/Forum.EventService.csproj
@@ -64,13 +64,13 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\ECommon.Log4Net.1.4.0\lib\net45\ECommon.Log4Net.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.5.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.5.4\lib\net45\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.5.5\lib\net45\ENode.dll</HintPath>
     </Reference>
-    <Reference Include="ENode.EQueue, Version=1.5.8.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode.EQueue, Version=1.5.9.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.EQueue.1.5.8\lib\net45\ENode.EQueue.dll</HintPath>
+      <HintPath>..\packages\ENode.EQueue.1.5.9\lib\net45\ENode.EQueue.dll</HintPath>
     </Reference>
     <Reference Include="EQueue, Version=1.3.7.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -102,6 +102,9 @@
     <Compile Include="Providers\EventHandlerTypeCodeProvider.cs" />
     <Compile Include="Providers\EventTopicProvider.cs" />
     <Compile Include="Providers\EventTypeCodeProvider.cs" />
+    <Compile Include="Providers\MessageHandlerTypeCodeProvider.cs" />
+    <Compile Include="Providers\MessageTopicProvider.cs" />
+    <Compile Include="Providers\MessageTypeCodeProvider.cs" />
     <Compile Include="Service1.cs">
       <SubType>Component</SubType>
     </Compile>
