--- a/Forum.CommandService/packages.config
+++ b/Forum.CommandService/packages.config
@@ -7,8 +7,8 @@
   <package id="ECommon.Dapper" version="1.4.0" targetFramework="net45" />
   <package id="ECommon.JsonNet" version="1.4.1" targetFramework="net45" />
   <package id="ECommon.Log4Net" version="1.4.0" targetFramework="net45" />
-  <package id="ENode" version="2.5.4" targetFramework="net45" />
-  <package id="ENode.EQueue" version="1.5.8" targetFramework="net45" />
+  <package id="ENode" version="2.5.5" targetFramework="net45" />
+  <package id="enode.equeue" version="1.5.9" targetFramework="net45" />
   <package id="EQueue" version="1.3.7" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net451" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net451" />
