--- a/Forum.Denormalizers.Dapper/Forum.Denormalizers.Dapper.csproj
+++ b/Forum.Denormalizers.Dapper/Forum.Denormalizers.Dapper.csproj
@@ -45,9 +45,9 @@
     <Reference Include="ECommon.Dapper">
       <HintPath>..\packages\ECommon.Dapper.1.4.0\lib\net45\ECommon.Dapper.dll</HintPath>
     </Reference>
-    <Reference Include="ENode, Version=2.5.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="ENode, Version=2.5.5.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\ENode.2.5.4\lib\net45\ENode.dll</HintPath>
+      <HintPath>..\packages\ENode.2.5.5\lib\net45\ENode.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
@@ -56,7 +56,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BaseEventHandler.cs" />
+    <Compile Include="BaseHandler.cs" />
+    <Compile Include="ReplyCreatedMessage.cs" />
+    <Compile Include="ReplyCreatedMessageSender.cs" />
+    <Compile Include="ReplyMessageHandler.cs" />
     <Compile Include="SectionEventHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AccountEventHandler.cs" />
