--- a/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
+++ b/Forum.Domain.Dapper/Forum.Domain.Dapper.csproj
@@ -45,6 +45,10 @@
     <Reference Include="ECommon.Dapper">
       <HintPath>..\packages\ECommon.Dapper.1.4.0\lib\net45\ECommon.Dapper.dll</HintPath>
     </Reference>
+    <Reference Include="ENode, Version=2.5.5.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\ENode.2.5.5\lib\net45\ENode.dll</HintPath>
+    </Reference>
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
