修改日志记录级别。

--- a/Forum.BrokerService/log4net.config
+++ b/Forum.BrokerService/log4net.config
@@ -38,11 +38,11 @@
         </layout>
     </appender>
     <logger name="ECommon" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="ecommonAppender" />
     </logger>
     <logger name="EQueue" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="equeueAppender" />
     </logger>
     <root>
