--- a/Forum.EventService/log4net.config
+++ b/Forum.EventService/log4net.config
@@ -49,15 +49,15 @@
         </layout>
     </appender>
     <logger name="ECommon" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="ecommonAppender" />
     </logger>
     <logger name="EQueue" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="equeueAppender" />
     </logger>
     <logger name="ENode" additivity="false">
-        <level value="Info"/>
+        <level value="DEBUG"/>
         <appender-ref ref="enodeAppender" />
     </logger>
     <root>
