--- a/Forum.Domain/Forum.Domain.csproj
+++ b/Forum.Domain/Forum.Domain.csproj
@@ -58,7 +58,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Accounts\AccountIndex.cs" />
-    <Compile Include="Accounts\RegisterAccountIndexService.cs" />
+    <Compile Include="Accounts\RegisterAccountService.cs" />
     <Compile Include="Accounts\IAccountIndexRepository.cs" />
     <Compile Include="Accounts\Account.cs" />
     <Compile Include="Accounts\NewAccountRegisteredEvent.cs" />
