--- a/Forum.Domain.Tests/log4net.config
+++ b/Forum.Domain.Tests/log4net.config
@@ -5,7 +5,7 @@
         </layout>
     </appender>
     <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/ecommon.txt"/>
+        <param name="File" value="logs/ecommon.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -16,7 +16,7 @@
         </layout>
     </appender>
     <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/equeue.txt"/>
+        <param name="File" value="logs/equeue.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -27,7 +27,7 @@
         </layout>
     </appender>
     <appender name="enodeAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/enode.txt"/>
+        <param name="File" value="logs/enode.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -38,15 +38,15 @@
         </layout>
     </appender>
     <logger name="ECommon" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="ecommonAppender" />
     </logger>
     <logger name="EQueue" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="equeueAppender" />
     </logger>
     <logger name="ENode" additivity="false">
-        <level value="Info"/>
+        <level value="INFO"/>
         <appender-ref ref="enodeAppender" />
     </logger>
     <root>
