--- a/Forum.Web/log4net.config
+++ b/Forum.Web/log4net.config
@@ -1,6 +1,6 @@
 ﻿<log4net debug="false">
-  <appender name="rollingFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-    <param name="File" value="log/log.txt"/>
+  <appender name="rollingAppender" type="log4net.Appender.RollingFileAppender,log4net">
+    <param name="File" value="logs/default.log"/>
     <param name="AppendToFile" value="true"/>
     <param name="RollingStyle" value="Date"/>
     <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -13,6 +13,6 @@
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <priority value="INFO"/>
-    <appender-ref ref="rollingFileAppender"/>
+    <appender-ref ref="rollingAppender"/>
   </root>
 </log4net>
