--- a/Forum.BrokerService/App.config
+++ b/Forum.BrokerService/App.config
@@ -3,7 +3,7 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
-  <connectionStrings>
-    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100"/>
-  </connectionStrings>
+  <appSettings>
+    <add key="equeueStorePath" value="d:\forum-equeue-store"/>
+  </appSettings>
 </configuration>
