--- a/Forum.BrokerService/log4net.config
+++ b/Forum.BrokerService/log4net.config
@@ -4,8 +4,8 @@
             <param name="ConversionPattern" value="%date %5level - %message%newline"/>
         </layout>
     </appender>
-    <appender name="defaultFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/default.txt"/>
+    <appender name="defaultAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="logs/default.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -16,7 +16,7 @@
         </layout>
     </appender>
     <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/ecommon.txt"/>
+        <param name="File" value="logs/ecommon.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -27,7 +27,7 @@
         </layout>
     </appender>
     <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/equeue.txt"/>
+        <param name="File" value="logs/equeue.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -37,18 +37,6 @@
             <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
         </layout>
     </appender>
-    <appender name="messageAppender" type="log4net.Appender.RollingFileAppender,log4net">
-      <param name="File" value="/equeue_message_logs/message.log"/>
-      <param name="Encoding" value="utf-8"/>
-      <param name="AppendToFile" value="true"/>
-      <param name="RollingStyle" value="Size" />
-      <param name="MaximumFileSize" value="100MB"/>
-      <param name="MaxSizeRollBackups" value="-1" />
-      <param name="ImmediateFlush" value="true" />
-      <layout type="log4net.Layout.PatternLayout,log4net">
-        <param name="ConversionPattern" value="%message%newline"/>
-      </layout>
-    </appender>
     <logger name="ECommon" additivity="false">
         <level value="INFO"/>
         <appender-ref ref="ecommonAppender" />
@@ -57,14 +45,10 @@
         <level value="INFO"/>
         <appender-ref ref="equeueAppender" />
     </logger>
-    <logger name="MessageLogger" additivity="false">
-      <level value="INFO"/>
-      <appender-ref ref="messageAppender" />
-    </logger>
     <root>
         <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
         <priority value="INFO"/>
         <appender-ref ref="consoleAppender"/>
-        <appender-ref ref="defaultFileAppender"/>
+        <appender-ref ref="defaultAppender"/>
     </root>
 </log4net>
