--- a/Forum.EventService/log4net.config
+++ b/Forum.EventService/log4net.config
@@ -4,8 +4,8 @@
             <param name="ConversionPattern" value="%date %5level - %message%newline"/>
         </layout>
     </appender>
-    <appender name="defaultFileAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/default.txt"/>
+    <appender name="defaultAppender" type="log4net.Appender.RollingFileAppender,log4net">
+        <param name="File" value="logs/default.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -16,7 +16,7 @@
         </layout>
     </appender>
     <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/ecommon.txt"/>
+        <param name="File" value="logs/ecommon.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -27,7 +27,7 @@
         </layout>
     </appender>
     <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/equeue.txt"/>
+        <param name="File" value="logs/equeue.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -38,7 +38,7 @@
         </layout>
     </appender>
     <appender name="enodeAppender" type="log4net.Appender.RollingFileAppender,log4net">
-        <param name="File" value="log/enode.txt"/>
+        <param name="File" value="logs/enode.log"/>
         <param name="AppendToFile" value="true"/>
         <param name="RollingStyle" value="Date"/>
         <param name="DatePattern" value="yyyy-MM-dd"/>
@@ -57,13 +57,13 @@
         <appender-ref ref="equeueAppender" />
     </logger>
     <logger name="ENode" additivity="false">
-        <level value="DEBUG"/>
+        <level value="INFO"/>
         <appender-ref ref="enodeAppender" />
     </logger>
     <root>
         <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
         <priority value="INFO"/>
         <appender-ref ref="consoleAppender"/>
-        <appender-ref ref="defaultFileAppender"/>
+        <appender-ref ref="defaultAppender"/>
     </root>
 </log4net>
