升级到最新版本的enode，增加密码的加密处理。

--- a/Forum.Web/Web.config
+++ b/Forum.Web/Web.config
@@ -7,9 +7,7 @@
     <add key="UnobtrusiveJavaScriptEnabled" value="false" />
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
-  <connectionStrings>
-    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" />
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config" />
   <!--
     For a description of web.config changes see http://go.microsoft.com/fwlink/?LinkId=235367.
 
