--- a/Forum.Web/packages.config
+++ b/Forum.Web/packages.config
@@ -4,14 +4,9 @@
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net45" />
   <package id="Dapper" version="1.42" targetFramework="net45" />
-  <package id="ECommon" version="1.5.5" targetFramework="net45" />
-  <package id="ECommon.Autofac" version="1.5.5" targetFramework="net45" />
-  <package id="ECommon.Dapper" version="1.5.5" targetFramework="net45" />
-  <package id="ECommon.JsonNet" version="1.5.5" targetFramework="net45" />
-  <package id="ECommon.Log4Net" version="1.5.5" targetFramework="net45" />
-  <package id="ENode" version="2.6.9" targetFramework="net45" />
-  <package id="ENode.EQueue" version="1.7.0" targetFramework="net45" />
-  <package id="EQueue" version="2.0.3" targetFramework="net45" />
+  <package id="ECommon" version="2.0.2" targetFramework="net45" />
+  <package id="ENode" version="2.7.1" targetFramework="net45" />
+  <package id="EQueue" version="2.0.7" targetFramework="net45" />
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.1.0" targetFramework="net45" />
@@ -19,5 +14,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
+  <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
