--- a/Forum.EventService/App.config
+++ b/Forum.EventService/App.config
@@ -3,7 +3,5 @@
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
   </startup>
-  <connectionStrings>
-    <add name="default" connectionString="Data Source=(localdb)\Projects;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100"/>
-  </connectionStrings>
+  <connectionStrings configSource="connectionStrings.config" />
 </configuration>
