--- a/Forum.BrokerService/packages.config
+++ b/Forum.BrokerService/packages.config
@@ -7,4 +7,5 @@
   <package id="log4net" version="2.0.3" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="protobuf-net" version="2.0.0.668" targetFramework="net45" />
+  <package id="Topshelf" version="3.3.1" targetFramework="net45" />
 </packages>
