Upgrade enode to 2.8.1

--- a/Forum.Web/connectionStrings.config
+++ b/Forum.Web/connectionStrings.config
@@ -1,4 +1,4 @@
 ﻿<connectionStrings>
-  <add name="enode" connectionString="Data Source=.;Integrated Security=true;Initial Catalog=enode;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" providerName="System.Data.SqlClient" />
-  <add name="forum" connectionString="Data Source=.;Integrated Security=true;Initial Catalog=forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" providerName="System.Data.SqlClient" />
+  <add name="enode" connectionString="Data Source=.;Integrated Security=true;Initial Catalog=ENode;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" providerName="System.Data.SqlClient" />
+  <add name="forum" connectionString="Data Source=.;Integrated Security=true;Initial Catalog=Forum;Connect Timeout=30;Min Pool Size=10;Max Pool Size=100" providerName="System.Data.SqlClient" />
 </connectionStrings>
