--- a/Forum.Web/log4net.config
+++ b/Forum.Web/log4net.config
@@ -1,6 +1,17 @@
 ﻿<log4net debug="false">
-  <appender name="rollingAppender" type="log4net.Appender.RollingFileAppender,log4net">
+  <appender name="defaultAppender" type="log4net.Appender.RollingFileAppender,log4net">
     <param name="File" value="logs/default.log"/>
+    <param name="AppendToFile" value="true"/>
+    <param name="RollingStyle" value="Date"/>
+    <param name="DatePattern" value=".yyyy-MM-dd"/>
+    <param name="StaticLogFileName" value="true"/>
+    <param name="CountDirection" value="1"/>
+    <layout type="log4net.Layout.PatternLayout,log4net">
+      <param name="ConversionPattern" value="%date %5level - %message%newline"/>
+    </layout>
+  </appender>
+  <appender name="ecommonAppender" type="log4net.Appender.RollingFileAppender,log4net">
+    <param name="File" value="logs/ecommon.log"/>
     <param name="AppendToFile" value="true"/>
     <param name="RollingStyle" value="Date"/>
     <param name="DatePattern" value=".yyyy-MM-dd"/>
@@ -10,9 +21,58 @@
       <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
     </layout>
   </appender>
+  <appender name="equeueAppender" type="log4net.Appender.RollingFileAppender,log4net">
+    <param name="File" value="logs/equeue.log"/>
+    <param name="AppendToFile" value="true"/>
+    <param name="RollingStyle" value="Date"/>
+    <param name="DatePattern" value=".yyyy-MM-dd"/>
+    <param name="StaticLogFileName" value="true"/>
+    <param name="CountDirection" value="1"/>
+    <layout type="log4net.Layout.PatternLayout,log4net">
+      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+    </layout>
+  </appender>
+  <appender name="enodeEQueueAppender" type="log4net.Appender.RollingFileAppender,log4net">
+    <param name="File" value="logs/enode.equeue.log"/>
+    <param name="AppendToFile" value="true"/>
+    <param name="RollingStyle" value="Date"/>
+    <param name="DatePattern" value=".yyyy-MM-dd"/>
+    <param name="StaticLogFileName" value="true"/>
+    <param name="CountDirection" value="1"/>
+    <layout type="log4net.Layout.PatternLayout,log4net">
+      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+    </layout>
+  </appender>
+  <appender name="enodeAppender" type="log4net.Appender.RollingFileAppender,log4net">
+    <param name="File" value="logs/enode.log"/>
+    <param name="AppendToFile" value="true"/>
+    <param name="RollingStyle" value="Date"/>
+    <param name="DatePattern" value=".yyyy-MM-dd"/>
+    <param name="StaticLogFileName" value="true"/>
+    <param name="CountDirection" value="1"/>
+    <layout type="log4net.Layout.PatternLayout,log4net">
+      <param name="ConversionPattern" value="%date %5level %logger - %message%newline"/>
+    </layout>
+  </appender>
+  <logger name="ECommon" additivity="false">
+    <level value="INFO"/>
+    <appender-ref ref="ecommonAppender" />
+  </logger>
+  <logger name="EQueue" additivity="false">
+    <level value="INFO"/>
+    <appender-ref ref="equeueAppender" />
+  </logger>
+  <logger name="ENode.EQueue" additivity="false">
+    <level value="INFO"/>
+    <appender-ref ref="enodeEQueueAppender" />
+  </logger>
+  <logger name="ENode" additivity="false">
+    <level value="INFO"/>
+    <appender-ref ref="enodeAppender" />
+  </logger>
   <root>
     <!--all priority options： OFF、FATAL、ERROR, WARN, INFO, DEBUG, ALL-->
     <priority value="INFO"/>
-    <appender-ref ref="rollingAppender"/>
+    <appender-ref ref="defaultAppender"/>
   </root>
 </log4net>
