更新ENode到最新版本。

--- a/Forum.BrokerService/App.config
+++ b/Forum.BrokerService/App.config
@@ -4,6 +4,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
   </startup>
   <appSettings>
-    <add key="equeueStorePath" value="c:\forum-equeue-store"/>
+    <add key="equeueStorePath" value="d:\forum-equeue-store"/>
   </appSettings>
 </configuration>
